--- a/user/Makefile
+++ b/user/Makefile
@@ -1,4 +1,4 @@
-.DEFAULT_GOAL := all
+.DEFAULT_GOAL := bin
 
 ARCH ?= riscv64
 MODE ?= release
@@ -11,16 +11,16 @@ cmake_build_args += -DCMAKE_BUILD_TYPE=Debug
 endif
 
 OBJCOPY := $(ARCH)-linux-musl-objcopy
+OBJDUMP := $(ARCH)-linux-musl-objdump
 
 elf:
 	@mkdir -p build
 	@cd build && cmake $(cmake_build_args) .. && make -j
+	@$(foreach elf, $(wildcard build/$(ARCH)/*), $(OBJDUMP) $(elf) -S -d > $(patsubst build/$(ARCH)/%, %.S, $(elf));)
 
 bin: elf
 	@mkdir -p $(out_dir)
 	@$(foreach elf, $(wildcard build/$(ARCH)/*), $(OBJCOPY) $(elf) -S -O binary $(patsubst build/$(ARCH)/%, $(out_dir)/%.bin, $(elf));)
-
-all: elf
 
 clean:
 	@rm -rf build target
