--- a/user/Makefile
+++ b/user/Makefile
@@ -17,10 +17,10 @@ CP := cp
 elf:
 	@mkdir -p build
 	@cd build && cmake $(cmake_build_args) .. && make -j
+
+bin:
 	@mkdir -p asm
 	@$(foreach elf, $(wildcard build/$(ARCH)/*), $(OBJDUMP) $(elf) -S -d > $(patsubst build/$(ARCH)/%, asm/%.asm, $(elf));)
-
-bin: elf
 	@mkdir -p $(out_dir)
 	@$(foreach elf, $(wildcard build/$(ARCH)/*), $(OBJCOPY) $(elf) --strip-all -O binary $(patsubst build/$(ARCH)/%, $(out_dir)/%.bin, $(elf));)
 
